2008-03-04  Mike Krüger <mkrueger@novell.com> 

	

2008-03-04  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Added some getstring calls

2008-02-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Added missing null check.

2008-01-25  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	  Add a workaround for [MarshalAs (UnmanagedType.SysInt)] not working.
	  Fixes "Bug 325391 - Crash when attempting to browse registered repo" but
	  related issues remain in the binding.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.addin.xml:
	  Update MD version.

2008-01-24  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SubversionVersionControl.cs:
	  In GetRepostoryReference, properly check if the provided directory is
	  versioned. Fixes bug #355770.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion.addin.xml:
	  Updated add-in category and description.

2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/SvnClient.cs:
	  Notify file changes through the FileService.

2008-01-16  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	  More marshalling fixes.

2008-01-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.VersionControl.Subversion/MonoDevelop.VersionControl.Subversion/LibSvnClient.cs:
	  Fix marshalling issues.

2008-01-09  Lluis Sanchez Gual <lluis@novell.com> 
